--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=primeiroprojetodesafio
+spring.datasource.url=jdbc:postgresql://localhost:5432/primeiroprojetodesafio
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
